kustomize/components/route/builder.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quay-builder
spec:
  # TODO(alecmerdler): Allow configuring `BUILDMAN_HOSTNAME`...
  # host: $(BUILDMAN_HOSTNAME)
  to:
    kind: Service
    name: quay-app
  port:
    targetPort: grpc
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
